Change email address

--- a/animation.html
+++ b/animation.html
@@ -17,7 +17,7 @@
 						<li><a href="greetings.html">Greetings</a></li>
 						<li><a href="polarclock.html">My Polar Clock</a></li>
 						<li><a href="animation.html" class="on">Animation</a></li>
-						<li><a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+						<li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 						</li>
 					</ul>
 				</div>
@@ -44,7 +44,7 @@
 					<p>I really struggled with the Animation part of the coursework. I was able to think of a good idea and implement this idea. However synchronising this with the music proved more difficult than my orignal thoughts as the musical functions are so limited. I have managed this to a certain extent but am not happy with how I had to leave it.</p>
 				</div>
 					<div id="footerCreditRow" align="center">
-					Made by Toby Ward - <a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+					Made by Toby Ward - <a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 					<br>
 					<br>	
 					<a href="index.html">Home</a>			
