--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
 						<li><a href="cv.html" class="on">CV</a></li>
 						<li><a href="greetings.html">Greetings</a></li>
 						<li><a href="polarclock.html">My Polar Clock</a></li>
-            <li><a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+            <li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
             </li>
 					</ul>
 				</div>
@@ -24,7 +24,7 @@
 			<div id="contentRow">
 				<div class="container">
 					<div id="cvpagetitle">
-					<h1>Toby Ward - 21 years old</span></h1>
+					<h1>Toby Ward - 22 years old</span></h1>
           <br>
 					<h2>My CV</h2>
 				</div>
@@ -79,7 +79,7 @@ The helpdesk role involves effective communication with customers, providing adv
 <p> 
   2014 – Morphsites 
 </p> 
-  Work Experience on basic skills relating to B2B eCommerce Websites, introduction to website development. See www.tobymward.com.
+  Work Experience on basic skills relating to B2B eCommerce Websites, introduction to website development. See www.tobyward.me.
 <br>
 <br>
 <p> 
@@ -153,7 +153,7 @@ English Literature - D <br>
 					<p>I am currently working full time in Taunton, Somerset and do not expect this to change in the near future. </p>
 				</div>
 					<div id="footerCreditRow" align="center">
-					Made by Toby Ward	- <a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+					Made by Toby Ward	- <a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 					<br>
 					<br>
 					<a href="index.html">Home</a>				
