--- a/greetings.html
+++ b/greetings.html
@@ -16,7 +16,7 @@
 						<li><a href="cv.html">CV</a></li>
 						<li><a href="greetings.html" class="on">Greetings</a></li>
 						<li><a href="polarclock.html">My Polar Clock</a></li>
-						<li><a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+						<li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 						</li>
 					</ul>
 				</div>
@@ -41,7 +41,7 @@
 					<p>Although the specification for the coursework said 'This should contain a short (less than 10 second) video clip of you introducing your site'. I came to the conclusion that this would be a little boring and similar to most other sites, so I wanted to do something slightly different. I decided that it would be nice to video myself working on the production of the site. With the help of a friend and a video camera this was the outcome.</p>
 				</div>
 					<div id="footerCreditRow" align="center">
-					Made by Toby Ward - <a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>	
+					Made by Toby Ward - <a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>	
 					<br>
 					<br>
 					<a href="index.html">Home</a>			
