--- a/hobbies.html
+++ b/hobbies.html
@@ -43,7 +43,7 @@
 					I know most people reading this will have read 'geocaching' and thought to themselves 'what on earth is geocaching?' So I will explain. Geocaching is a global treaure hunt with millions of people taking part. The idea is that using a GPS receiver (this can now be done using the geocaching app on your mobile phone if it contains GPS functionality) you enter the co-ordinates of the location where the geocache is hidden. Then follow the GPS receiver to the location and then search for the hidden box. Geocaching is a really fun day out with kids or even just to visit new places. For more information visit <a href="http://www.geocaching.com/" target="_blank" class="white">www.geocaching.com</a></p>
 				</div>
 					<div id="footerCreditRow" align="center">
-					Made by Toby Ward - <a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+					Made by Toby Ward - <a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 					<br>
 					<br>
 					<a href="index.html">Home</a>
