--- a/polarclock.html
+++ b/polarclock.html
@@ -171,7 +171,7 @@
 					<li><a href="greetings.html">Greetings</a></li>
 		
 				<li><a href="polarclock.html" class="on">My Polar Clock</a></li>
-                        <li><a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+                        <li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
                         </li>
 	
 				</ul>
@@ -213,7 +213,7 @@
 			
 		<div id="footerCreditRow" align="center">
 	
-Made by Toby Ward - <a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+Made by Toby Ward - <a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 
 	<br>
 				
