--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<li><a href="cv.html">CV</a></li>
 						<li><a href="greetings.html">Greetings</a></li>
 						<li><a href="polarclock.html">My Polar Clock</a>
-						<li><a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+						<li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 						</li>
 					</ul>
 				</div>
@@ -42,7 +42,7 @@
 				</div>
 					<div id="footerCreditRow" align="center">
 					<br>
-					Made by Toby Ward - <a href="mailto:toby@tobymward.com?Subject=Website Contact" target="_top">Contact Me</a>
+					Made by Toby Ward - <a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 					</div>
 				</div>
 			</div>
