--- a/startpage/Startpage2.html
+++ b/startpage/Startpage2.html
@@ -22,12 +22,12 @@ body, html {height: 100%}
     Logo
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Hello Toby</h1>
+    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">X days left</p>
+    <p class="w3-large w3-center">35 days left</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="http://www.tobyward.me" target="_blank">Toby Ward</a>
+    Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
   </div>
 </div>
 
