--- a/startpage/Startpage2.html
+++ b/startpage/Startpage2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Toby's Start Page</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style/startpage2.css" type="text/css" />
@@ -19,7 +19,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo Here
+    
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Hello Toby</h1>
