--- a/startpage/Startpage2.html
+++ b/startpage/Startpage2.html
@@ -15,17 +15,47 @@ body, html {height: 100%}
     background-size: cover;
 }
 </style>
-<body>
-
+<body onload="checkTime()">
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Hello Toby</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">35 days left</p>
+      <hr class="w3-border-grey" style="margin:auto;width:40%">
+       <p id="time" class="w3-large w3-center">
+         <p id="date" class="w3-large w3-center">
+          <script>
+
+          function checkTime(i) {
+            if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+             return i;
+          }
+
+          function GetDateTime() {
+              n =  new Date();
+              y = n.getFullYear();
+              m = n.getMonth() + 1;
+              d = n.getDate();
+              document.getElementById("date").innerHTML = d + "/" + m + "/" + y;
+              var today = new Date();
+              var h = today.getHours();
+              var m = today.getMinutes();
+              var s = today.getSeconds();
+              m = checkTime(m);
+              s = checkTime(s);
+              document.getElementById("time").innerHTML =
+              h + ":" + m + ":" + s;
+              setTimeout(GetDateTime, 1000);
+            }
+
+            GetDateTime();
+
+            </script>
+        </p>
+      </p>
   </div>
+
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="http://www.tobyward.me" target="_blank">Toby Ward</a>
   </div>
