minor visual changes

--- a/startpage/Startpage2.html
+++ b/startpage/Startpage2.html
@@ -17,14 +17,13 @@ body, html {height: 100%}
 </style>
 <body onload="checkTime()">
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+   <div id="date" class="w3-display-topleft w3-padding-large w3-xlarge">
     
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Hello Toby</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
-       <p id="time" class="w3-large w3-center">
-         <p id="date" class="w3-large w3-center">
+       <p id="time" class="w3-xxlarge w3-center">
           <script>
 
           function checkTime(i) {
@@ -37,7 +36,7 @@ body, html {height: 100%}
               y = n.getFullYear();
               m = n.getMonth() + 1;
               d = n.getDate();
-              document.getElementById("date").innerHTML = d + "/" + m + "/" + y;
+              document.getElementById("date").innerHTML = d + " . " + m + " . " + y;
               var today = new Date();
               var h = today.getHours();
               var m = today.getMinutes();
@@ -45,7 +44,7 @@ body, html {height: 100%}
               m = checkTime(m);
               s = checkTime(s);
               document.getElementById("time").innerHTML =
-              h + ":" + m + ":" + s;
+              h + " : " + m + " : " + s;
               setTimeout(GetDateTime, 1000);
             }
 
@@ -57,7 +56,7 @@ body, html {height: 100%}
   </div>
 
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="http://www.tobyward.me" target="_blank">Toby Ward</a>
+    <!--Powered by <a href="http://www.tobyward.me" target="_blank">Toby Ward</a>-->
   </div>
 </div>
 
