--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 			</div>
 			<div id="contentRow">
 				<div class="container" align="center">
-				<image src="img/Tobywardpicture.jpg" alt="Toby Ward"/>
+				<image src="img/author_generic.jpg" alt="Toby Ward"/>
 				<br>
 				<br>
-					<h1>Toby Ward - <span>22 years old</span></h1>
+					<h1>Toby Ward - <span>23 years old</span></h1>
 				</div>
 			</div>
 			<div id="footerRow">
@@ -38,7 +38,7 @@
 					<h1>About Me and My Site</h1>
 					<hr size="1" color="#3C3C3C" width="100%">
 					<br>
-					<p>Hello. My name is Toby Ward. I designed this site for my Introduction to Multimedia coursework whilst at University with help from the guys at Morphsites. Testing 					</p>
+					<p>Hello. My name is Toby Ward. I designed this site for my Introduction to Multimedia coursework whilst at University with help from the guys at Morphsites. 					</p>
 				</div>
 					<div id="footerCreditRow" align="center">
 					<br>
