--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<h1>About Me and My Site</h1>
 					<hr size="1" color="#3C3C3C" width="100%">
 					<br>
-					<p>Hello. My name is Toby Ward. I designed this site for my Introduction to Multimedia coursework whilst at University with help from the guys at Morphsites. 					</p>
+					<p>Hello. My name is Toby Ward. I designed this site in my spare time and actively maintain it as a hobby.				</p>
 				</div>
 					<div id="footerCreditRow" align="center">
 					<br>
