--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
    	<div id="wrapper">
    		<div id="headerRow">
    			<div class="container">
-   				<a href="index.html"><img src="img/logo.png" alt="Computer    Science Year 1" class="logo" /></a>
+   				<a href="index.html"><img src="img/tw_logo2_alt.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
   				<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="cv.html" class="on">CV</a></li>
