--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="wrapper">
 			<div id="headerRow">
 				<div class="container">
-					<a href="index.html"><img src="img/logo.png" alt="Toby Ward - 21 Years Old" class="logo" /></a>
+					<a href="index.html"><img src="img/tw_logo2_alt.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
 					<ul>
 						<li><a href="index.html" class="on">Home</a></li>
 						<li><a href="cv.html">CV</a></li>
