--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<div id="wrapper">
 			<div id="headerRow">
 				<div class="container">
-					<a href="index.html"><img src="img/tw_logo2_alt.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
+					<div class="container1"
+					<a href="index.html"><img src="img/tw_logo.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
+					<div class="verticalline"></div>
 					<ul>
 						<li><a href="index.html" class="on">Home</a></li>
 						<li><a href="cv.html">CV</a></li>
@@ -21,6 +23,7 @@
 						<li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 						</li>
 					</ul>
+				</div>
 				</div>
 			</div>
 			<div id="contentRow">
