--- a/polarclock.html
+++ b/polarclock.html
@@ -160,7 +160,7 @@
 		
 		<div class="container">
 		
-			<a href="index.html"><img src="img/tw_logo2_alt.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
+			<a href="index.html"><img src="img/tw_logo.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
 		
 			<ul>
 					
