--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="wrapper">
 			<div id="headerRow">
 				<div class="container">
-					<div class="container1"
+					<div class="container1">
 					<a href="index.html"><img src="img/tw_logo.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
 					<div class="verticalline"></div>
 					<ul>
