--- a/polarclock.html
+++ b/polarclock.html
@@ -159,6 +159,8 @@
 		<div id="headerRow">
 		
 		<div class="container">
+
+            <div class="container1">
 		
 			<a href="index.html"><img src="img/tw_logo.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
 		
@@ -175,7 +177,7 @@
                         </li>
 	
 				</ul>
-		
+		  </div>
 		</div>
 		
 	</div>
