--- a/animation.html
+++ b/animation.html
@@ -10,6 +10,7 @@
 		<div id="wrapper">
 			<div id="headerRow">
 				<div class="container">
+					<div class="container1">
 					<a href="index.html"><img src="img/tw_logo.png" alt="Toby Ward - 23 Years Old" class="logo" /></a>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -20,6 +21,7 @@
 						<li><a href="mailto:toby@tobyward.me?Subject=Website Contact" target="_top">Contact Me</a>
 						</li>
 					</ul>
+				</div>
 				</div>
 			</div>
 			<div id="contentRow">
