--- a/Test/index.html
+++ b/Test/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>heard.tech</title>
+		<title>Toby Ward</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -24,8 +24,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/profile-photo.jpeg" alt="" /></span>
-							<h1>Greg Heard</h1>
-							<p>Junior Web Developer</p>
+							<h1>Toby Ward</h1>
+							<p>TEXT HERE</p>
 						</header>
 						<!--
 						<hr />
