--- a/Test/index.html
+++ b/Test/index.html
@@ -78,7 +78,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Greg Heard</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Toby Ward</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
