--- a/Test/index.html
+++ b/Test/index.html
@@ -21,12 +21,12 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Toby Ward</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<p>Text &nbsp;&bull;&nbsp; Text &nbsp;&bull;&nbsp; Text</p>
 						<nav>
 							<ul>
 								<li><a href="http://twitter.com/tobyward14" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/toby.ward.79" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" target="_blank" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.instagram.com/tobyward1414/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/tobyward" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:toby@tobyward.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
@@ -35,7 +35,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Toby Ward. Design thanks to: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Toby Ward. Design thanks to: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</span>
 					</footer>
 
 			</div>
