add inspect code

--- a/Test/index.html
+++ b/Test/index.html
@@ -12,6 +12,19 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	
+	<!-- Begin Inspectlet Asynchronous Code -->
+<script type="text/javascript">
+(function() {
+window.__insp = window.__insp || [];
+__insp.push(['wid', 601867005]);
+var ldinsp = function(){
+if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=601867005&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+setTimeout(ldinsp, 0);
+})();
+</script>
+<!-- End Inspectlet Asynchronous Code -->
+
 	<body class="is-preload">
 		<div id="wrapper">
 			<div id="bg"></div>
@@ -21,13 +34,13 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Toby Ward</h1>
-						<p>Text &nbsp;&bull;&nbsp; Text &nbsp;&bull;&nbsp; Text</p>
+						<p>Who &nbsp;&bull;&nbsp; Am &nbsp;&bull;&nbsp; I?</p>
 						<nav>
 							<ul>
 								<li><a href="http://twitter.com/tobyward14" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/toby.ward.79" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/tobyward1414/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/tobyward" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/toby-ward-593a3510a/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:toby@tobyward.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
@@ -35,7 +48,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Toby Ward. Design thanks to: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Toby Ward. <!--Design thanks to: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</span>-->
 					</footer>
 
 			</div>
