--- a/Test/index.html
+++ b/Test/index.html
@@ -25,6 +25,17 @@ setTimeout(ldinsp, 0);
 </script>
 <!-- End Inspectlet Asynchronous Code -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86720336-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-86720336-1');
+</script>
+
+
 	<body class="is-preload">
 		<div id="wrapper">
 			<div id="bg"></div>
