--- a/index.html
+++ b/index.html
@@ -1,64 +1,73 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<title>Toby's Start Page</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/startpage2.css" type="text/css" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url("./img/forestbridge.jpg");
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
-<body onload="checkTime()">
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-   <div id="date" class="w3-display-topleft w3-padding-large w3-xlarge">
-    
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Hello Toby</h1>
-      <hr class="w3-border-grey" style="margin:auto;width:40%">
-       <p id="time" class="w3-xxlarge w3-center">
-          <script>
+	<head>
+		<title>Toby Ward</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	
+	<!-- Begin Inspectlet Asynchronous Code -->
+<script type="text/javascript">
+(function() {
+window.__insp = window.__insp || [];
+__insp.push(['wid', 601867005]);
+var ldinsp = function(){
+if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=601867005&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+setTimeout(ldinsp, 0);
+})();
+</script>
+<!-- End Inspectlet Asynchronous Code -->
 
-          function checkTime(i) {
-            if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-             return i;
-          }
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86720336-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-          function GetDateTime() {
-              n =  new Date();
-              y = n.getFullYear();
-              m = n.getMonth() + 1;
-              d = n.getDate();
-              document.getElementById("date").innerHTML = d + " . " + m + " . " + y;
-              var today = new Date();
-              var h = today.getHours();
-              var m = today.getMinutes();
-              var s = today.getSeconds();
-              m = checkTime(m);
-              s = checkTime(s);
-              document.getElementById("time").innerHTML =
-              h + " : " + m + " : " + s;
-              setTimeout(GetDateTime, 1000);
-            }
+  gtag('config', 'UA-86720336-1');
+</script>
 
-            GetDateTime();
 
-            </script>
-        </p>
-      </p>
-  </div>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
-  <div class="w3-display-bottomleft w3-padding-large">
-    <!--Powered by <a href="http://www.tobyward.me" target="_blank">Toby Ward</a>-->
-  </div>
-</div>
+				<!-- Header -->
+					<header id="header">
+						<h1>Toby Ward</h1>
+						<p>Who &nbsp;&bull;&nbsp; Am &nbsp;&bull;&nbsp; I?</p>
+						<nav>
+							<ul>
+								<li><a href="http://twitter.com/tobyward14" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/toby.ward.79" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/tobyward1414/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/toby-ward-593a3510a/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:toby@tobyward.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
 
-</body>
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Toby Ward. <!--Design thanks to: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</span>-->
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
