--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ setTimeout(ldinsp, 0);
   gtag('config', 'UA-86720336-1');
 </script>
 
+<script src="https://embed.small.chat/T3KMS4UNNGCHCJ86RG.js" async></script>
+
 
 	<body class="is-preload">
 		<div id="wrapper">
