--- a/start.html
+++ b/start.html
@@ -9,14 +9,14 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url("./img/forestbridge.jpg");
+    background-image: url("./img/bg.jpg");
     min-height: 100%;
     background-position: center;
     background-size: cover;
 }
 </style>
 <body onload="checkTime()">
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-grey">
    <div id="date" class="w3-display-topleft w3-padding-large w3-xlarge">
     
   </div>
