--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Toby Ward</title>
+		<title>Ward Consultancy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,13 +46,11 @@ setTimeout(ldinsp, 0);
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Toby Ward</h1>
-						<p>Who &nbsp;&bull;&nbsp; Am &nbsp;&bull;&nbsp; I?</p>
+						<h1>Ward Consultancy</h1>
+						<p>Toby Ward</p> <!--&nbsp;&bull;&nbsp; Am &nbsp;&bull;&nbsp; I?-->
 						<nav>
 							<ul>
-								<li><a href="http://twitter.com/tobyward14" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/toby.ward.79" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/tobyward1414/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/toby-ward-593a3510a/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:toby@tobyward.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
